style: fix shadow, color, whitespace

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -58,7 +58,7 @@ h2 {
   text-transform: uppercase;
   font-weight: 500;
 
-  border-radius: 30px;
+  border-radius: 100px;
   display: inline-block;
 }
 
@@ -77,6 +77,10 @@ h2 {
   padding: 8px 12px;
 }
 
+img {
+  border-radius: 12px;
+}
+
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -86,7 +90,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -94,10 +98,11 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
+  /* text-shadow: 0 20px 10px rgba(0, 0, 0, 0.07); */
 }
 
 .header-text {
@@ -114,7 +119,7 @@ img {
 .features-icon {
   stroke: #087f5b;
   width: 32px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .features-title {
@@ -132,6 +137,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -149,11 +155,26 @@ img {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.7;
+  color: #e6fcf5;
+}
+
+.testimonial-author {
+  color: #c3fae8;
 }
 
 /* CHAIRS */
+
+.chair {
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+}
+
 .chair-box {
-  padding: 24px;
+  padding: 32px;
+}
+
+.chair img {
+  border-radius: 12px 12px 0 0;
 }
 
 h3 {
@@ -163,14 +184,14 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
   display: flex;
   align-items: center;
   gap: 12px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .chair-details li:last-child {
@@ -185,10 +206,12 @@ h3 {
 .chair-price {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 20px;
 }
 
 footer {
+  display: none;
   margin-bottom: 48px;
   font-size: 14px;
   color: #495057;
